--- a/app.json
+++ b/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
+    "pages/personal/personal",
+    "pages/login/login",
     "pages/index/index",
+    "pages/video/video",
     "components/NavHeader/NavHeader"
   ],
   "window": {
@@ -10,5 +13,29 @@
     "navigationBarTextStyle": "white"
   },
   "style": "v2",
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+"tabBar": {
+  "color": "#333",
+  "selectedColor":"#FA466D",
+  "list": [
+    {
+    "pagePath": "pages/index/index",
+    "text": "首页",
+    "iconPath": "./static/images/tabs/tab-home.png",
+    "selectedIconPath": "./static/images/tabs/tab-home-current.png"
+  },
+  {
+    "pagePath": "pages/video/video",
+    "text": "视频",
+    "iconPath": "./static/images/tabs/select.png",
+    "selectedIconPath": "./static/images/tabs/selected.png"
+  },
+  {
+    "pagePath": "pages/personal/personal",
+    "text": "个人中心",
+    "iconPath": "./static/images/tabs/tab-my.png",
+    "selectedIconPath": "./static/images/tabs/tab-my-current.png"
+  }
+]
+}
 }
